<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/menu_home_drawer"/>

    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_baseline_map_white_24"
        android:title="@string/menu_map"/>
</menu>