...
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.DetailedHouseFragment"
    android:id="@+id/detailed_house_fragment">

   <LinearLayout
       android:id="@+id/detail_main_lyt"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginBottom="50dp"
...
